1. Fix lines and height of projects 2. fix the letter spacing in navBar

--- a/src/project.css
+++ b/src/project.css
@@ -89,4 +89,6 @@ div.projectDisplay1 {
   text-align: left;
   padding-left: 1%;
   padding-right: 1%;
+  padding-top: 0.2%;
+  padding-bottom: 0.4%;
 }
